# MinerSoftRender

./: CMakeLists.txt  README.md  main.cpp
core/: camera.cpp  camera.h  pch.h  renderbuffer.cpp  renderbuffer.h  shader.h
math/: color.cpp  color.h  graphics.cpp  graphics.h  maths.cpp  maths.h  matrix.h  vector.cpp  vector.h
model/: model.cpp  model.h  tgaimage.cpp  tgaimage.h
platform/: platform.cpp  platform.h
scenes/: gameobject.cpp  gameobject.h  scenes.cpp  scenes.h
shaders/: FlatShader.cpp  GouraudShader.cpp  NormalMapShader.cpp  PhongShader.cpp  ShadowShader.cpp  TextureShader.cpp  TextureWithLightShader.cpp  ToonShader.cpp
